{
    "name": "playerControls",
    "maps": [
        {
            "name": "player",
            "id": "9818990c-2a44-4e33-95b2-74fb04101351",
            "actions": [
                {
                    "name": "Forward",
                    "type": "Button",
                    "id": "f568c39a-6ade-492e-b874-492a2e6ef267",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Backward",
                    "type": "Button",
                    "id": "3c1f8eb9-b03e-4f27-a00f-06c8af1de3d7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Left",
                    "type": "Button",
                    "id": "d1cf25a1-2f2d-4f23-bd6c-ac1c5e8fad3a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Right",
                    "type": "Button",
                    "id": "0dde4066-50ae-4290-8830-1ed67b21e41f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LookAround",
                    "type": "PassThrough",
                    "id": "aa789998-915e-4bdd-a835-9f487a9b9363",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UnlockMouse",
                    "type": "Button",
                    "id": "d4213e13-d675-46aa-8ea4-72bdf0ec32cf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pull_out_Phone",
                    "type": "Button",
                    "id": "40d2b0e5-e3e0-4fc7-8b81-4a1483511168",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "56378dc4-f8b2-41f0-863a-f9bbc1a69285",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Forward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9e9a09ce-da96-4a89-9e32-afaef9f29e16",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Backward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "efbed001-e5f3-42e5-a154-fae05389b821",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6882d736-d38a-4270-ab58-4de711e055c7",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "44f7dec7-8fab-40d9-b2c4-5b23d8681f59",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LookAround",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dd6e2145-13f5-4929-a3e1-dc27834ea7f5",
                    "path": "<Keyboard>/alt",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UnlockMouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4a9fa04c-c4ea-4175-943c-fade0277ac00",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pull_out_Phone",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}